fix: alignment

--- a/blocks/job-list/job-list.css
+++ b/blocks/job-list/job-list.css
@@ -2,54 +2,58 @@
   --color-text: var(--spectrum-gray-900);
   --color-border: var(--spectrum-gray-400);
   margin-block: 2rem;
-  display: block;
-
-  @media (min-width: 105rem) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-  }
+  grid-row-gap: 0rem;
 }
 
 .job-list__heading {
-  font-size: var(--spectrum-heading-size-s);
-  margin-block: 0 0.5rem;
+  margin-block-end: 0.875rem;
   color: var(--color-text);
+  align-self: start;
 
   @media (min-width: 48rem) {
     font-size: var(--spectrum-heading-size-m);
     margin-block: 0 1.375rem;
+    grid-column: span 12;
   }
 
   @media (min-width: 80rem) {
     font-size: var(--spectrum-heading-size-s);
     margin-block: 0 1.5rem;
+    grid-column: span 4;
   }
 
-  @media (min-width: 105rem) {
+  @media (min-width: 100rem) {
     margin-block: 0;
-    grid-column: 1;
   }
 }
 
 .job-list__listings {
   display: block;
 
-  & .job-listing {
-    border-top: 1px solid var(--color-border);
+  @media (min-width: 48rem) {
+    grid-column: span 12;
   }
 
-  & .job-listing:last-child {
-    border-bottom: 1px solid var(--color-border);
+  & .job-listing {
+    border-top: 1px solid var(--color-border);
+
+    @media (min-width: 80rem) {
+      padding-block-start: 0;
+    }
+  }
+
+  & .job-listing:first-child {
+    border-top: 0;
   }
 
   @media (min-width: 48rem) {
+
     & .job-listing::after {
       display: none;
     }
   }
 
-  @media (min-width: 80rem) {
+  @media (min-width: 48rem) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
@@ -63,7 +67,8 @@
     }
   }
 
-  @media (min-width: 105rem) {
-    grid-column: 2 / span 2;
+  @media (min-width: 80rem) {
+    grid-column: span 8;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
